progweb/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: password-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: password.local # Vous pouvez utiliser le nom que vous voulez
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: password-manager-service # Le nom du service que vous avez déjà créé
                port:
                  number: 80 # Le port exposé par votre service
